--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Custom Sliders</string>
+
+    <string name="current_indicator_value">➟ %s</string>
+    <string name="with_scale">With scale</string>
+
+    <array name="scale_items">
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+        <item>60</item>
+        <item>70</item>
+        <item>80</item>
+        <item>90</item>
+    </array>
 </resources>
